# commerceos-ai

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
ai-service/: .env.example  .gitignore  Dockerfile  pyproject.toml
ai-service/app/: config.py  db.py  main.py
ai-service/app/llm/: gemini.py  imagen.py
ai-service/app/prompts/: insights.py  kvkk.py  message_writer.py  product_image.py  product_writer.py  review_analysis.py  review_reply.py  segmentation.py
ai-service/app/routers/: agent.py  anomaly.py  bank.py  campaigns.py  cashflow.py  chat.py  customer_campaign.py  customers.py  finance.py  goals.py  health.py  images.py  insights.py  kvkk.py  messages.py  pricing.py  products.py  receipt_ocr.py  reviews.py  turnaround.py
ai-service/app/tools/: definitions.py  executor.py  query.py  schema_doc.py
ai-service/tests/: test_health.py  test_product_prompt.py
db/init/: 01-readonly-user.sql
web/: .env.example  .gitignore  auth.config.ts  auth.ts  jsrepo.config.mts  middleware.ts  next-env.d.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
web/app/: globals.css  icon.tsx  layout.tsx  page.tsx
web/app/(admin)/: layout.tsx
web/app/(auth)/: layout.tsx
web/lib/: activity.ts  format.ts  nav.ts  storage.ts  theme.ts
web/prisma/: schema.prisma  seed-agent-rich.ts  seed-pamuk-images.json  seed-pamuk-production.ts  seed-realistic.ts  seed-scheduled-and-agent.ts  seed.ts  update-category-images.mts
web/public/: final-test.txt
web/scripts/: agent-worker.ts
web/types/: chat.ts  next-auth.d.ts
(+462 files in other folders)
