[project]
name = "commerceos-ai-service"
version = "0.1.0"
description = "Gemini-powered AI service for CommerceOS admin."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "google-genai>=0.3.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "redis>=5.2.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.8.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "N"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
